# bamboobot

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: 3d_mapping.launch  3d_navigation.launch  3d_registration.launch  mapping.launch  navigation.launch  registration.launch
maps/: maruzen.pgm  maruzen.yaml
nodes/: goto_spot  register_spot  scan_filter  sequence
sequences/: measure_main_table.json
spots/: initial_point.yaml  main_table.yaml  table1.yaml  table2.yaml
