<?xml version="1.0"?>
<package format="2">
  <name>bamboobot</name>
  <version>0.1.1</version>
  <description>The bamboobot package</description>
  <maintainer email="nagao@rb-sapiens.com">Shun Nagao</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
</package>
